--- a/ecm_4.cfg
+++ b/ecm_4.cfg
@@ -1,4 +1,4 @@
-[mcu cp_ecm_4]
+Y789[mcu cp_ecm_4]
 serial: /dev/serial/by-path/platform-xhci-hcd.3.auto-usb-0:1.2:1.0
 restart_method: command
 
@@ -135,8 +135,8 @@ rotation_distance: 8.003964672
 
 extruder: extruder
 step_pin: cp_ecm_4:PC12
-dir_pin: !cp_ecm_4:PC11
-enable_pin: !cp_ecm_4:PC10
+dir_pin: !cp_ecm_4:PC10
+enable_pin: !cp_ecm_4:PC11
 microsteps: 16
 rotation_distance: 7.851715344
 
